--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
-    "multer": "^2.0.0"
+    "multer": "^2.0.0",
+    "prompt-sync": "^4.2.0"
   }
 }
